--- a/astra-blog/package.json
+++ b/astra-blog/package.json
@@ -26,6 +26,7 @@
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^7.6.0",
     "swiper": "^11.2.6"
