--- a/astra-blog/package.json
+++ b/astra-blog/package.json
@@ -20,12 +20,15 @@
     "@material-tailwind/react": "^2.1.10",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.8",
+    "clsx": "^2.1.1",
     "draft-js": "^0.11.7",
     "lexical": "^0.31.1",
+    "lucide-react": "^0.513.0",
     "next": "^15.1.7",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^7.6.0",
