--- a/astra-blog/jsconfig.json
+++ b/astra-blog/jsconfig.json
@@ -1,8 +1,7 @@
-{
-  "compilerOptions": {
-    "baseUrl": ".",
-    "paths": {
-      "@/*": ["./*"]
+{    "compilerOptions": {
+      "baseUrl": ".",
+      "paths": {
+        "@/*": ["./*"]
+      }
     }
   }
-}
