--- a/astra-blog/package.json
+++ b/astra-blog/package.json
@@ -18,6 +18,8 @@
     "@lexical/selection": "^0.31.1",
     "@lexical/utils": "^0.31.1",
     "@material-tailwind/react": "^2.1.10",
+    "@supabase/ssr": "^0.3.0",
+    "@supabase/supabase-js": "^2.50.0",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.8",
     "clsx": "^2.1.1",
@@ -28,6 +30,7 @@
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.8",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-quill": "^2.0.0",
@@ -36,6 +39,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/react": "19.1.8",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
     "postcss": "^8",
