--- a/astra-blog/package.json
+++ b/astra-blog/package.json
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/node": "24.0.3",
     "@types/react": "19.1.8",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
