--- a/astra-blog/package.json
+++ b/astra-blog/package.json
@@ -20,6 +20,7 @@
     "@material-tailwind/react": "^2.1.10",
     "@supabase/ssr": "^0.3.0",
     "@supabase/supabase-js": "^2.50.0",
+    "@vercel/speed-insights": "^1.2.0",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.8",
     "clsx": "^2.1.1",
